# audioswitch

./: .gitignore  CMakeLists.txt  README.md  audio_switch.c  device.c  device.h  interface.c  interface.h  main.c  switchaudio.rb
homebrew/: switchaudio-osx.rb
